fix(scroller): prevent elements shift when prepending new items

--- a/projects/ngx-uic/scroller/src/components/scroller/scroller.component.scss
+++ b/projects/ngx-uic/scroller/src/components/scroller/scroller.component.scss
@@ -1,6 +1,3 @@
 :host {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     overflow: auto;
 }
